# wincher-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  security_best_practices_report.md  wincher_mcp_server.py
.cursor/rules/: README.md  architecture.mdc  coding-guidelines.mdc  core.mdc  git-commit.mdc  releasing.mdc  security.mdc  testing.mdc
.cursor/skills/: README.md
.cursor/skills/local-dev/: SKILL.md
.cursor/skills/publishing-version-to-pypi/: SKILL.md
.cursor/skills/ship-release/: SKILL.md
.cursor/skills/update-api-spec/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: EXAMPLES.md  MCP_CONFIG.example.json  PYPI.md  SETUP.md
docs/api/: META.json  README.md  wincher-openapi.json
scripts/: fetch_wincher_openapi.py  publish_pypi.py  publish_pypi_lib.py
src/wincher_mcp/: __init__.py  __main__.py  server.py
test/: conftest.py  test_fetch_openapi.py  test_publish_pypi.py  test_security.py  test_toon_output.py
