[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wincher-mcp"
version = "0.2.0"
description = "Read-only Wincher SEO MCP server for Cursor, Claude Code, and other stdio MCP hosts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Vedran Mandić" },
    { name = "Chris Tutt" },
]
keywords = ["mcp", "wincher", "seo", "model-context-protocol", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27.0,<1",
    "python-toon>=0.1.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pip-audit>=2.7,<3",
]

[project.scripts]
wincher-mcp = "wincher_mcp.server:cli"

[project.urls]
Homepage = "https://github.com/vmandic/wincher-mcp"
Repository = "https://github.com/vmandic/wincher-mcp"
Documentation = "https://github.com/vmandic/wincher-mcp#readme"
Issues = "https://github.com/vmandic/wincher-mcp/issues"
Changelog = "https://github.com/vmandic/wincher-mcp/releases"

[tool.hatch.version]
path = "src/wincher_mcp/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/wincher_mcp_server.py",
    "/README.md",
    "/LICENSE",
    "/docs/MCP_CONFIG.example.json",
]

[tool.pytest.ini_options]
testpaths = ["test"]
